reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_1149_col_5_001.log

*** crates/tracewake-core/src/events/apply.rs:1149:5: replace parse_optional_routine_template_id -> Result<Option<crate::ids::RoutineTemplateId>, ApplyError> with Ok(Some(Default::default()))

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace parse_optional_routine_template_id -> Result<Option<crate::ids::RoutineTemplateId>, ApplyError> with Ok(Some(Default::default()))
@@ -1141,28 +1141,17 @@
         key: "trace_id",
         value: value.to_string(),
     })
 }
 
 fn parse_optional_routine_template_id(
     payload: &BTreeMap<&str, &str>,
 ) -> Result<Option<crate::ids::RoutineTemplateId>, ApplyError> {
-    let Some(value) = payload.get("selected_routine_method").copied() else {
-        return Ok(None);
-    };
-    if value.is_empty() {
-        return Ok(None);
-    }
-    crate::ids::RoutineTemplateId::new(value)
-        .map(Some)
-        .map_err(|_| ApplyError::BadPayload {
-            key: "selected_routine_method",
-            value: value.to_string(),
-        })
+    Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_u8(payload: &BTreeMap<&str, &str>, key: &'static str) -> Result<u8, ApplyError> {
     let value = required(payload, key)?;
     value.parse::<u8>().map_err(|_| ApplyError::BadPayload {
         key,
         value: value.to_string(),
     })


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/apply.rs` has changed (1781910481.055924870s, 6s after last build at 1781910475.635924975s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `RoutineTemplateId: Default` is not satisfied
    --> crates/tracewake-core/src/events/apply.rs:1149:13
     |
1149 |     Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
     |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `RoutineTemplateId`
    --> crates/tracewake-core/src/ids.rs:78:9
     |
  78 |         pub struct $name(StableId);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 151 | stable_id_type!(RoutineTemplateId);
     | ---------------------------------- in this macro invocation
     = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `ids::RoutineTemplateId: Default` is not satisfied
    --> crates/tracewake-core/src/events/apply.rs:1149:13
     |
1149 |     Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
     |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `ids::RoutineTemplateId`
    --> crates/tracewake-core/src/ids.rs:78:9
     |
  78 |         pub struct $name(StableId);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 151 | stable_id_type!(RoutineTemplateId);
     | ---------------------------------- in this macro invocation
     = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
